--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ AllCops:
     - 'Rakefile'
     - 'config/initializers/filter_parameter_logging.rb'
   DisplayCopNames: true
+  SuggestExtensions: false
+  NewCops: enable
 
 Layout/MultilineBlockLayout:
   Exclude:
